force-app/main/default/objects/Course_Offering__c.object
<CustomObject>
    <fields>
        <fullName>Academic_CI_Sequence_Number__c</fullName>
        <label>Academic CI Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Academic_Calendar_Type__c</fullName>
        <label>Academic Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_Alternate_Code__c</fullName>
        <label>Admission Alternate Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_CI_Sequence_Number__c</fullName>
        <label>Admission CI Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admission_Calendar_Description__c</fullName>
        <label>Admission Calendar Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Calendar_F__c</fullName>
        <description>Shortened version of the Admission Calendar Description</description>
        <formula>TEXT(Academic_Year__c) + &apos; &apos; + Admission_Calendar_Type__c</formula>
        <label>Admission Calendar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Calendar_Type__c</fullName>
        <label>Admission Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category_Desc__c</fullName>
        <label>Admission Category Desc</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <externalId>true</externalId>
        <label>Admission Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_GST__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Apply GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode_Description__c</fullName>
        <label>Attendance Mode Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Mix_Mode</fullName>
                    <label>Mix Mode</label>
                </value>
                <value>
                    <fullName>EX</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Type_Description__c</fullName>
        <label>Attendance Type Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_Key__c</fullName>
        <formula>IF(AND(!ISBLANK( Academic_CI_Sequence_Number__c ),!ISBLANK( Admission_CI_Sequence_Number__c )),TEXT(Academic_CI_Sequence_Number__c) + &apos;_&apos; + TEXT(Admission_CI_Sequence_Number__c  ) ,null)</formula>
        <label>Calendar Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Name_Alternate__c</fullName>
        <formula>IF(NOT(ISBLANK(Calendar__r.Calendar_Name_Alternate__c)), Calendar__r.Calendar_Name_Alternate__c, &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Name Alternate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar</label>
        <referenceTo>Calendar__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>[PD] Same list Case &gt; Course_Location__c | Make sure to sync</description>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ballarat</fullName>
                </value>
                <value>
                    <fullName>Bendigo</fullName>
                </value>
                <value>
                    <fullName>Berwick</fullName>
                </value>
                <value>
                    <fullName>Broadmeadows</fullName>
                </value>
                <value>
                    <fullName>Brunswick</fullName>
                </value>
                <value>
                    <fullName>Caroline Springs</fullName>
                </value>
                <value>
                    <fullName>Caulfield</fullName>
                </value>
                <value>
                    <fullName>Clayton</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Doncaster</fullName>
                </value>
                <value>
                    <fullName>Ferntree Gully</fullName>
                </value>
                <value>
                    <fullName>Footscray</fullName>
                </value>
                <value>
                    <fullName>Frankston North</fullName>
                </value>
                <value>
                    <fullName>Geelong</fullName>
                </value>
                <value>
                    <fullName>Gippsland</fullName>
                </value>
                <value>
                    <fullName>Ivanhoe</fullName>
                </value>
                <value>
                    <fullName>Knox</fullName>
                </value>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
                <value>
                    <fullName>Melbourne CBD</fullName>
                </value>
                <value>
                    <fullName>Mill Park</fullName>
                </value>
                <value>
                    <fullName>Moorabbin</fullName>
                </value>
                <value>
                    <fullName>Narre Warren</fullName>
                </value>
                <value>
                    <fullName>Northcote</fullName>
                </value>
                <value>
                    <fullName>Notting Hill</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pakenham</fullName>
                </value>
                <value>
                    <fullName>Parkville</fullName>
                </value>
                <value>
                    <fullName>Peninsula</fullName>
                </value>
                <value>
                    <fullName>Prato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship_Type__c</fullName>
        <label>Citizenship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOM-AUS</fullName>
                </value>
                <value>
                    <fullName>DOM-HV</fullName>
                </value>
                <value>
                    <fullName>DOM-NZ</fullName>
                </value>
                <value>
                    <fullName>DOM-PR</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC</fullName>
                </value>
                <value>
                    <fullName>DOM-SA</fullName>
                </value>
                <value>
                    <fullName>INT-SA</fullName>
                </value>
                <value>
                    <fullName>INT-TEP</fullName>
                </value>
                <value>
                    <fullName>INTRNTNL</fullName>
                </value>
                <value>
                    <fullName>DOM-SUN</fullName>
                </value>
                <value>
                    <fullName>INT-SUN</fullName>
                </value>
                <value>
                    <fullName>INT-SUN-P</fullName>
                </value>
                <value>
                    <fullName>DOM-IDN</fullName>
                </value>
                <value>
                    <fullName>DOM-IDN-PR</fullName>
                </value>
                <value>
                    <fullName>INT-IDN-P</fullName>
                </value>
                <value>
                    <fullName>INT-IDN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commencement_Period__c</fullName>
        <formula>Course__r.ACAD_Year__c
&amp; &quot; &quot; &amp;
CASE( Admission_Calendar_Type__c ,
&apos;ADM-1&apos;, &apos;Semester 1 (February start)&apos;,
&apos;ADM-2&apos;, &apos;Semester 2 (July start)&apos;,
&apos;ADM-SPRING&apos;, &apos;Spring Semester (July-Nov start, varies by course)&apos;,
&apos;ADM-SUMMR&apos;, &apos;Summer Semester&apos;,
&apos;ADM-WNTR&apos;, &apos;Winter Semester (April-June start, varies by course)&apos;,
NULL)</formula>
        <label>Commencement Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concession_Fee__c</fullName>
        <label>Concession Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This represents the course is confirmed to be held</description>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correspondence_Category__c</fullName>
        <label>Correspondence Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Abbreviation__c</fullName>
        <label>Course Abbreviation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code_F__c</fullName>
        <formula>Course__r.Name</formula>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <externalId>true</externalId>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Duration__c</fullName>
        <formula>Course__r.Duration_FT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Key__c</fullName>
        <formula>IF(AND(!ISBLANK(Course_Code__c),!ISBLANK(Course_Version_Number__c)),Course_Code__c + &apos;_&apos; +  TEXT(Course_Version_Number__c) ,null)</formula>
        <label>Course_Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Offering_Detail__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Available&apos;),
&apos;At [&apos; &amp; Venue__r.Name &amp; &apos;] Starting on [&apos; &amp; TEXT(Start_Date__c) &amp; &apos;]&apos; &amp; &apos; [ Full: $&apos; &amp;  TEXT(Fee__c)  &amp; &apos; Con: $&apos; &amp;  TEXT(Concession_Fee__c)  &amp; &apos; ] &apos; &amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000004SDIR&quot;,&quot;AVAILABLE&quot;,19,80) &amp; &quot; [ &quot; &amp; TEXT(Number_of_Remaining_Places__c) &amp; &apos; Places ]&apos;, 
IF(ISPICKVAL(Status__c,&apos;Full&apos;),
&apos;At [&apos; &amp; Venue__r.Name &amp; &apos;] Starting on [&apos; &amp; TEXT(Start_Date__c) &amp; &apos;]&apos; &amp; &apos; [ Full: $&apos; &amp; TEXT(Fee__c) &amp; &apos; Con: $&apos; &amp; TEXT(Concession_Fee__c) &amp; &apos; ] &apos; &amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000004SDIT&quot;,&quot;WAITLIST&quot;,20,76) &amp; &quot; [ &quot; &amp; TEXT(Number_of_Remaining_Places__c) &amp; &apos; Places ]&apos;,
IF(ISPICKVAL(Status__c,&apos;Cancelled&apos;),
&apos;At [&apos; &amp; Venue__r.Name &amp; &apos;] Starting on [&apos; &amp; TEXT(Start_Date__c) &amp; &apos;]&apos; &amp; &apos; [ Full: $&apos; &amp; TEXT(Fee__c) &amp; &apos; Con: $&apos; &amp; TEXT(Concession_Fee__c) &amp; &apos; ] &apos; &amp; IMAGE(&quot;/servlet/servlet.FileDownload?file=01528000004SDIS&quot;,&quot;CANCELLED&quot;,21,74) &amp; &quot; [ &quot; &amp; TEXT(Number_of_Remaining_Places__c) &amp; &apos; Places ]&apos;,&apos;&apos;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Offering Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Offering_UID__c</fullName>
        <description>Unique Hashed Id generated from MIX UID</description>
        <externalId>true</externalId>
        <label>Course_Offering_UID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_Presenter_Name__c</fullName>
        <label>Course Presenter Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title_F__c</fullName>
        <formula>Course__r.Course_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type_Group__c</fullName>
        <label>Course Type Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version_Number__c</fullName>
        <label>Course Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cricos_Code__c</fullName>
        <label>Cricos Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customised_course_offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customised course offering ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled_Postponed__c</fullName>
        <label>Date Cancelled/Postponed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Admission_Category_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Admission Category Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Derived_Closing_Date__c</fullName>
        <description>Course closing date derived from Course offering end date or overrides etc.</description>
        <inlineHelpText>Course closing date derived from Course offering end date or overrides etc.</inlineHelpText>
        <label>Derived Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrolment_Category__c</fullName>
        <label>Enrolment Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Code__c</fullName>
        <formula>Course__r.Faculty_Code__c</formula>
        <label>Faculty Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <label>Fee Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hecs_Payment_Option__c</fullName>
        <label>Hecs Payment Option</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Selective__c</fullName>
        <formula>Course__r.Is_Selective__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Selective?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Cancellation Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Course_ID__c</fullName>
        <label>Legacy Course ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Course_Offering_ID__c</fullName>
        <label>Legacy Course Offering ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Presenter_ID__c</fullName>
        <label>Legacy Presenter ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Time_ID__c</fullName>
        <label>Legacy Time ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Venue_ID__c</fullName>
        <label>Legacy Venue ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <externalId>true</externalId>
        <label>Location Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Monash_Campuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Capacity__c</fullName>
        <formula>Venue__r.Maximum_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Micro_credential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Course offering for the Professional Development short course indicated as micro-credential.</description>
        <inlineHelpText>Participants who complete the micro-credential version of a course (if applicable) can receive credit points towards the award course/s specified on the course landing page.
            *Maximum credit limits and minimum course entry requirements apply, see the course terms and conditions page for more details.</inlineHelpText>
        <label>Micro-credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mix_Unique_Id__c</fullName>
        <description>Unique Key populated by the MIX API used as an External Id for delta upload</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Key populated by the MIX API used as an External Id for delta upload</inlineHelpText>
        <label>Mix Unique Id</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Sessions__c</fullName>
        <label>No. of Sessions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Remaining_Places__c</fullName>
        <formula>Venue__r.Maximum_Capacity__c - Registration_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Remaining Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Duration_Unit__c</fullName>
        <label>Override Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                    <label>Week(s)</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                    <label>Month(s)</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                    <label>Year(s)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Duration__c</fullName>
        <description>This field override the duration of a course. You must also select a override duration unit.</description>
        <inlineHelpText>This field override the duration of a course. You must also select a override duration unit.</inlineHelpText>
        <label>Override Duration</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_End_Date__c</fullName>
        <description>This date override the standard calendar end date</description>
        <inlineHelpText>This date override the standard calendar end date</inlineHelpText>
        <label>Override End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if the course offering calendar override information has been reviewed by the business before to start offering.</description>
        <inlineHelpText>Indicate if the course offering calendar override information has been reviewed by the business before to start offering.</inlineHelpText>
        <label>Override Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Start_Date__c</fullName>
        <description>This date override the standard calendar start date</description>
        <inlineHelpText>This date override the standard calendar start date</inlineHelpText>
        <label>Override Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_of_the_Day__c</fullName>
        <label>Part of the Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Weekend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_by_Cost_Centre_and_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PD specific field. Determines showing Cost Centre and Fund payment option on the Online Registration for this specific Course Offering</description>
        <inlineHelpText>Show Cost Centre and Fund payment option on the Online Registration</inlineHelpText>
        <label>Pay by Cost Centre and Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_by_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PD specific field. Determines showing invoice payment options on the Online Registration for this specific Course Offering</description>
        <inlineHelpText>Show invoice payment option on the Online Registration</inlineHelpText>
        <label>Pay by Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <description>This is populated by RollUp helper that calculates the sum of all payments (Payment Amount) for the Course Offering - Still Used?</description>
        <label>Payment Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Refund__c</fullName>
        <label>Payment Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Total__c</fullName>
        <formula>Payment_Received__c + Payment_Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_override__c</fullName>
        <description>Enter reason for overriding course duration or course end date</description>
        <inlineHelpText>Enter reason for overriding course duration or course end date</inlineHelpText>
        <label>Reason for override</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Close_Date__c</fullName>
        <description>The last day on which participants can register for the Course Offering. A default value is set under the Process Builder, PD Update CO [Partitioning for Short Courses]</description>
        <inlineHelpText>Defaults to the day before the Start Date unless a different date is entered</inlineHelpText>
        <label>Registration Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Count__c</fullName>
        <label>Registration Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Dates__c</fullName>
        <label>Session Dates</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>EOI</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Status__c</fullName>
        <label>Student Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Citizenship_Type__c</fullName>
        <label>System Citizenship Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Place_Code__c</fullName>
        <label>Type of Place Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Place_Description__c</fullName>
        <label>Type of Place Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Code__c</fullName>
        <formula>Course_Code__c&amp;&apos;-&apos;&amp;TEXT(Attendance_Type__c)&amp;&apos;-&apos;&amp;TEXT(Attendance_Mode__c)&amp;&apos;-&apos;&amp;Admission_Calendar_Description__c&amp;&apos;-&apos;&amp; Location_Code__c&amp;&apos;-&apos;&amp;Type_of_Place_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <externalId>true</externalId>
        <label>Unit Set Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Description__c</fullName>
        <label>Unit Set Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Key__c</fullName>
        <formula>IF(AND(!ISBLANK( Unit_Set_Code__c ),!ISBLANK( Unit_Set_Version__c )),Unit_Set_Code__c + &apos;_&apos; + TEXT(Unit_Set_Version__c ) ,null)</formula>
        <label>Unit Set Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Version__c</fullName>
        <label>Unit Set Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue_Maximum_Capacity__c</fullName>
        <formula>Venue__r.Maximum_Capacity__c</formula>
        <label>Venue Maximum Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Venue__c.Status__c</field>
                <operation>equals</operation>
                <value>Available</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waitlist_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waitlist Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waitlisted__c</fullName>
        <formula>IF(Venue_Maximum_Capacity__c - Registration_Count__c &gt;=0, TRUE, FALSE)</formula>
        <label>Waitlisted</label>
        <type>Checkbox</type>
    </fields>
    <label>Course Offering</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Academic_Year__c</columns>
        <columns>Admission_Calendar_Type__c</columns>
        <columns>Course_Type__c</columns>
        <columns>Admission_Category__c</columns>
        <columns>Attendance_Mode__c</columns>
        <columns>Attendance_Type__c</columns>
        <columns>Citizenship_Type__c</columns>
        <columns>Course_Code__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Faculty__c</columns>
        <columns>Type_of_Place_Code__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>